--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "y18n",
-  "version": "3.2.1",
-  "description": "the bare-bones internationalization library used by yargs",
+  "name": "y18n-browser",
+  "version": "1.0.0",
+  "description": "the bare-bones internationalization library used by yargs, made browser friendly",
   "main": "index.js",
   "scripts": {
     "pretest": "standard",
@@ -10,22 +10,23 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:yargs/y18n.git"
+    "url": "git@github.com:nemophrost/y18n-browser.git"
   },
   "files": [
     "index.js"
   ],
   "keywords": [
     "i18n",
+    "y18n",
     "internationalization",
-    "yargs"
+    "nemophrost"
   ],
   "author": "Ben Coe <ben@npmjs.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/yargs/y18n/issues"
+    "url": "https://github.com/nemophrost/y18n-browser/issues"
   },
-  "homepage": "https://github.com/yargs/y18n",
+  "homepage": "https://github.com/nemophrost/y18n-browser",
   "devDependencies": {
     "chai": "^3.4.1",
     "coveralls": "^2.11.6",
@@ -33,5 +34,8 @@
     "nyc": "^10.0.0",
     "rimraf": "^2.5.0",
     "standard": "^10.0.0-beta.0"
+  },
+  "dependencies": {
+    "sprintf-js": "^1.0.3"
   }
 }
