--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "y18n-browser",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "the bare-bones internationalization library used by yargs, made browser friendly",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,8 @@
     "url": "git@github.com:nemophrost/y18n-browser.git"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "viewer.js"
   ],
   "keywords": [
     "i18n",
